[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wizlight"
version = "0.1.0"
description = "Full-featured async Python library for WiZ smart lights"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Aleksandr Rogozin" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
keywords = ["wiz", "smart-home", "iot", "home-assistant", "lighting"]

[project.optional-dependencies]
cli = ["click>=8.0"]
zeroconf = ["zeroconf>=0.131.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
wizlight = "wizlight.cli:main"

[project.urls]
Homepage = "https://github.com/arogozin/wizlight"
Repository = "https://github.com/arogozin/wizlight"
Issues = "https://github.com/arogozin/wizlight/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wizlight"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
